--- a/detail/ID_directiveInMacroArgument.html
+++ b/detail/ID_directiveInMacroArgument.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>宏的参数列表中不应出现预编译指令 - C/C++ 安全规则</title>
+  <title>在宏的参数列表中不应使用预编译指令 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>宏的参数列表中不应出现预编译指令</h1>
+  <h1>在宏的参数列表中不应使用预编译指令</h1>
   <div id="subtitle">
     <div id="subtitle-id">3.4.6 ID_directiveInMacroArgument</div>
     <div id="subtitle-tags">
