--- a/detail/ID_exitCallInDestructor.html
+++ b/detail/ID_exitCallInDestructor.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>在析构函数中避免调用 exit 函数 - C/C++ 安全规则</title>
+  <title>避免在析构函数中调用 exit 函数 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,9 +27,9 @@
 </nav>
 <article>
 <header>
-  <h1>在析构函数中避免调用 exit 函数</h1>
+  <h1>避免在析构函数中调用 exit 函数</h1>
   <div id="subtitle">
-    <div id="subtitle-id">8.16 ID_exitCallInDestructor</div>
+    <div id="subtitle-id">8.17 ID_exitCallInDestructor</div>
     <div id="subtitle-tags">
       <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#function">目录</a> › <a class="rule-toc-link" href="./ID_sideEffectCopyConstructor.html">next</a> › <a class="rule-toc-link" href="./ID_virtualCallInDestructor.html">previous</a>
     </div>
