--- a/detail/ID_explicitLineDirective.html
+++ b/detail/ID_explicitLineDirective.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>非自动生成的代码中不应出现 line 指令 - C/C++ 安全规则</title>
+  <title>在非自动生成的代码中不应使用 line 指令 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>非自动生成的代码中不应出现 line 指令</h1>
+  <h1>在非自动生成的代码中不应使用 line 指令</h1>
   <div id="subtitle">
     <div id="subtitle-id">3.4.5 ID_explicitLineDirective</div>
     <div id="subtitle-tags">
