--- a/detail/ID_forbidBackslashInHeaderName.html
+++ b/detail/ID_forbidBackslashInHeaderName.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>include 指令中不应使用反斜杠 - C/C++ 安全规则</title>
+  <title>避免在 include 指令中使用反斜杠 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>include 指令中不应使用反斜杠</h1>
+  <h1>避免在 include 指令中使用反斜杠</h1>
   <div id="subtitle">
     <div id="subtitle-id">3.1.3 ID_forbidBackslashInHeaderName</div>
     <div id="subtitle-tags">
