--- a/detail/ID_if_hiddenCondition.html
+++ b/detail/ID_if_hiddenCondition.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>在 if...else-if 分枝中不应有被遮盖的条件 - C/C++ 安全规则</title>
+  <title>if...else-if 分枝的条件不应被遮盖 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>在 if...else-if 分枝中不应有被遮盖的条件</h1>
+  <h1>if...else-if 分枝的条件不应被遮盖</h1>
   <div id="subtitle">
     <div id="subtitle-id">9.1.3 ID_if_hiddenCondition</div>
     <div id="subtitle-tags">
