--- a/detail/ID_if_identicalImplicitElseBlock.html
+++ b/detail/ID_if_identicalImplicitElseBlock.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>if 分枝和隐含的 else 分枝代码不应完全相同 - C/C++ 安全规则</title>
+  <title>if 分枝和隐含的 else 分枝不应完全相同 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>if 分枝和隐含的 else 分枝代码不应完全相同</h1>
+  <h1>if 分枝和隐含的 else 分枝不应完全相同</h1>
   <div id="subtitle">
     <div id="subtitle-id">9.1.6 ID_if_identicalImplicitElseBlock</div>
     <div id="subtitle-tags">
