--- a/detail/ID_sig_nonAsyncSafeCall.html
+++ b/detail/ID_sig_nonAsyncSafeCall.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>在异步信号处理函数中避免使用非异步信号安全函数 - C/C++ 安全规则</title>
+  <title>避免在异步信号处理函数中使用非异步信号安全函数 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>在异步信号处理函数中避免使用非异步信号安全函数</h1>
+  <h1>避免在异步信号处理函数中使用非异步信号安全函数</h1>
   <div id="subtitle">
     <div id="subtitle-id">15.2 ID_sig_nonAsyncSafeCall</div>
     <div id="subtitle-tags">
