--- a/detail/ID_signalInMultiThreading.html
+++ b/detail/ID_signalInMultiThreading.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>多线程环境中不可使用 signal 函数 - C/C++ 安全规则</title>
+  <title>在多线程环境中不可使用 signal 函数 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>多线程环境中不可使用 signal 函数</h1>
+  <h1>在多线程环境中不可使用 signal 函数</h1>
   <div id="subtitle">
     <div id="subtitle-id">16.9 ID_signalInMultiThreading</div>
     <div id="subtitle-tags">
