--- a/detail/ID_switch_invalidStatement.html
+++ b/detail/ID_switch_invalidStatement.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>switch 语句中任何子句都应从属于某个 case 或 default 分枝 - C/C++ 安全规则</title>
+  <title>switch 语句的子句均应从属于某个 case 或 default 分枝 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>switch 语句中任何子句都应从属于某个 case 或 default 分枝</h1>
+  <h1>switch 语句的子句均应从属于某个 case 或 default 分枝</h1>
   <div id="subtitle">
     <div id="subtitle-id">9.5.4 ID_switch_invalidStatement</div>
     <div id="subtitle-tags">
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>switch 语句中任何子句都应从属于某个 case 或 default 分枝，否则不会被执行。</p>
+<p>switch 语句的所有子句都应从属于某个 case 或 default 分枝，否则不会被执行。</p>
 
 <p>示例：</p>
 <pre><code>switch (v)
