--- a/detail/ID_throwInConstructor.html
+++ b/detail/ID_throwInConstructor.html
@@ -75,7 +75,7 @@ public:
     a = holder_a.release();
     b = holder_b.release();
 }</code></pre>
-<p>先用 unique_ptr 对象持有资源，完成可能抛出异常的事务之后，再将资源转移给相关成员，转移的过程不可抛出异常，这种模式可以保证异常安全，如果有异常抛出，资源均可被正常回收。对遵循 C++11 及之后标准的代码，建议用 make_unique 函数代替 new 运算符。</p>
+<p>先用 unique_ptr 对象持有资源，完成可能抛出异常的事务之后，再将资源转移给相关成员，转移的过程不可抛出异常，这种模式可以保证异常安全，如果有异常抛出，资源均可被正常回收。对遵循 C++11 及之后标准的代码，建议用 make_unique 等工厂函数代替 new 运算符。</p>
 
 <p>示例代码意在讨论一种通用模式，实际代码可采用更直接的方式：</p>
 <pre><code>class A {
