--- a/detail/ID_throwInDestructor.html
+++ b/detail/ID_throwInDestructor.html
@@ -39,7 +39,7 @@
 <main>
 <p>析构函数抛出异常会违反异常处理机制。</p>
 
-<p>当抛出异常时，从异常被抛出到异常被处理之间的对象，也就是从“throw”到“catch”各层调用栈中的对象会被自动析构，如果这个过程中某个对象的析构函数又抛出异常便违反了异常处理机制，这种情况将直接引发 std::terminate 函数的执行，所以从析构函数抛出的异常可能无法被捕获和处理，也可能导致程序异常终止。</p>
+<p>抛出异常后，从 throw 表达式到相应 catch 子句各层调用栈中的对象会被自动析构，如果这个过程中某个对象的析构函数抛出异常便违反了异常处理机制，这种情况将直接引发 std::terminate 函数的执行，所以从析构函数抛出的异常可能无法被捕获和处理，也可能导致程序异常终止。</p>
 
 <p>示例（设 E0 和 E1 是不相关的异常类）：</p>
 <pre><code>class A {
@@ -63,10 +63,10 @@ public:
 <ul>
 <li>资源回收</li>
 <li>delete、delete[] 运算符</li>
-<li>具有 free、clear、release 等语义的函数</li>
+<li>具有 deallocate、free 等语义的函数</li>
 
 </ul>
-<p>另外，具有 swap、hash 等语义以及移动构造或赋值相关的过程也不应抛出异常，详见相关规则。</p>
+<p>另外，具有 swap、hash 等语义以及移动构造、移动赋值相关的过程也不应抛出异常，详见相关规则。</p>
 
 </main>
 
