--- a/detail/ID_tooManyLambdaLines.html
+++ b/detail/ID_tooManyLambdaLines.html
@@ -29,7 +29,7 @@
 <header>
   <h1>lambda 表达式的行数应在规定范围之内</h1>
   <div id="subtitle">
-    <div id="subtitle-id">8.39 ID_tooManyLambdaLines</div>
+    <div id="subtitle-id">8.40 ID_tooManyLambdaLines</div>
     <div id="subtitle-tags">
       <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#function">目录</a> › <a class="rule-toc-link" href="./ID_tooManyParams.html">next</a> › <a class="rule-toc-link" href="./ID_tooManyLines.html">previous</a>
     </div>
@@ -53,7 +53,7 @@
     //<i> Tut, tut, this is a function, not a namespace,</i>
     //<i> use common functions instead</i>
 }</code></pre>
-<p>建议 lambda 表达式不超过 5 行，一个函数中不应有多个复杂的 lambda 表达式。</p>
+<p>建议 lambda 表达式不超过 5 行。</p>
 
 </main>
 <h3>配置</h3>
