--- a/detail/ID_undefinedBehavior.html
+++ b/detail/ID_undefinedBehavior.html
@@ -48,7 +48,7 @@
     else
         return i + 1;
 }</code></pre>
-<p>示例代码用 i + 1 &lt;= i 判断是否溢出，但有符号整数溢出的后果是未定义的，这种判断可能是无效的，甚至某些编译器会认为 i + 1 &lt;= i 恒为假而免去 if 分枝的内容，直接返回 i + 1。</p>
+<p>示例代码用 i + 1 &lt;= i 判断是否溢出，但有符号整数溢出的后果是未定义的，这种判断可能是无效的，甚至某些编译器会认为 i + 1 &lt;= i 恒为假而免去 if 分枝，直接返回 i + 1。</p>
 
 <p>应改为：</p>
 <pre><code>int foo(int i) {
