--- a/detail/ID_differentEnumComparison.html
+++ b/detail/ID_differentEnumComparison.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：比较非同类枚举值相当于比较不同类别的事物，没有逻辑意义，往往是设计缺陷或逻辑错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：比较非同类枚举值相当于比较不同类别的事物，往往是设计缺陷或逻辑错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>比较非同类枚举值相当于比较不同类别的事物，没有逻辑意义，往往是设计缺陷或逻辑错误。</p>
+<p>比较非同类枚举值相当于比较不同类别的事物，往往是设计缺陷或逻辑错误。</p>
 
 <p>示例：</p>
 <pre><code>enum Fruit { apple, orange, banana };
