--- a/detail/ID_forbidCHeaderInCpp.html
+++ b/detail/ID_forbidCHeaderInCpp.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>C++ 代码不应引用 C 头文件 - C/C++ 安全规则</title>
+  <title>避免在 C++ 代码中包含 C 头文件 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>C++ 代码不应引用 C 头文件</h1>
+  <h1>避免在 C++ 代码中包含 C 头文件</h1>
   <div id="subtitle">
     <div id="subtitle-id">3.1.7 ID_forbidCHeaderInCpp</div>
     <div id="subtitle-tags">
