--- a/detail/ID_if_emptyBlock.html
+++ b/detail/ID_if_emptyBlock.html
@@ -42,7 +42,7 @@
 <p>示例：</p>
 <pre><code>if (cond);     //<i> Non-compliant</i>
 if (cond) {}   //<i> Non-compliant</i></code></pre>
-<p>如果 if 语句没有 else 分枝，且其分枝内容为空，这样的 if 语句无任何意义，即使其条件有副作用，也不应继续保留该 if 结构。</p>
+<p>如果 if 语句没有 else 分枝，且其分枝为空，这样的 if 语句无任何意义，即使其条件有副作用，也不应继续保留该 if 结构。</p>
 
 <p>又如：</p>
 <pre><code>if (cond) {    //<i> Non-compliant, empty</i>
