--- a/detail/ID_if_identicalElseIfBlock.html
+++ b/detail/ID_if_identicalElseIfBlock.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>if...else-if 各分枝的代码不应完全相同 - C/C++ 安全规则</title>
+  <title>不应存在完全相同的 if...else-if 分枝 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>if...else-if 各分枝的代码不应完全相同</h1>
+  <h1>不应存在完全相同的 if...else-if 分枝</h1>
   <div id="subtitle">
     <div id="subtitle-id">9.1.5 ID_if_identicalElseIfBlock</div>
     <div id="subtitle-tags">
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>内容完全相同的分枝是没有意义的，也可能是由复制粘贴造成的错误。</p>
+<p>完全相同的分枝是没有意义的，也可能是由复制粘贴造成的错误。</p>
 
 <p>示例：</p>
 <pre><code>if (condition1) {
@@ -49,7 +49,7 @@ else if (condition2) {
 else {
     branch1  //<i> Non-compliant</i>
 }</code></pre>
-<p>例中 condition1 对应分枝和 else 分枝的内容完全相同，应该合并成一个分枝，或修正本应存在的差异：</p>
+<p>例中 condition1 对应分枝和 else 分枝完全相同，应该合并成一个分枝，或修正本应存在的差异：</p>
 <pre><code>if (condition2) {
     branch2
 }
@@ -58,7 +58,7 @@ else {
 }
 </code></pre>
 <p>例外：</p>
-<p>如果分枝内容较少，为了使代码更清晰可以接受适当的重复，但如果分枝内容很多就不应重复了，审计工具不妨指定一个数量限制，当重复分枝的符号数量超过这个限制时算作违规，否则放过。</p>
+<p>如果分枝的代码量较少，为了使代码更清晰可以接受适当的重复，但如果代码量很多就不应重复了，审计工具不妨指定一个数量限制，当重复分枝的符号数量超过这个限制时算作违规，否则放过。</p>
 
 </main>
 <h3>配置</h3>
