--- a/detail/ID_inaccessibleTmpObject.html
+++ b/detail/ID_inaccessibleTmpObject.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：无名且不受控制的临时对象在构造之后会立即析构，在逻辑上没有意义，往往意味着错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：无名且不受控制的临时对象在构造之后会立即析构，往往意味着错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>无名且不受控制的临时对象在构造之后会立即析构，在逻辑上没有意义，往往意味着错误。</p>
+<p>无名且不受控制的临时对象在构造之后会立即析构，往往意味着错误。</p>
 
 <p>示例：</p>
 <pre><code>class A {
@@ -55,7 +55,7 @@ public:
     int a;
 
 public:
-    A(): A(0) {}        //<i> Compliant</i>
+    A(): A(0) {}        //<i> Compliant, delegating constructor</i>
     A(int x): a(x) {}
 };
 </code></pre>
