--- a/detail/ID_memberInitialization.html
+++ b/detail/ID_memberInitialization.html
@@ -29,9 +29,9 @@
 <header>
   <h1>成员须在声明处或构造时初始化</h1>
   <div id="subtitle">
-    <div id="subtitle-id">8.10 ID_memberInitialization</div>
+    <div id="subtitle-id">8.11 ID_memberInitialization</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#function">目录</a> › <a class="rule-toc-link" href="./ID_illMemberCall.html">next</a> › <a class="rule-toc-link" href="./ID_localInitialization.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#function">目录</a> › <a class="rule-toc-link" href="./ID_illMemberCall.html">next</a> › <a class="rule-toc-link" href="./ID_dynamicInitialization.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
