--- a/detail/ID_memoryLeak.html
+++ b/detail/ID_memoryLeak.html
@@ -52,7 +52,7 @@
     ....
     free(p);
 }</code></pre>
-<p>例中局部变量 p 记录已分配的内存地址，释放前在某种情况下函数返回，之后便再也无法访问到这块内存了，导致内存泄露。</p>
+<p>例中局部变量 p 记录已分配的内存地址，释放前在某种情况下函数返回，之后便再也无法访问到这块内存了，导致内存泄漏。</p>
 
 <p>又如：</p>
 <pre><code>void bar(size_t n) {
@@ -62,7 +62,7 @@
     }
     ....
 }</code></pre>
-<p>当 realloc 函数分配失败时会返回空指针，p 指向的原内存空间不会被释放，但 p 被赋值为空，导致内存泄露，这是一种常见错误。</p>
+<p>当 realloc 函数分配失败时会返回空指针，p 指向的原内存空间不会被释放，但 p 被赋值为空，导致内存泄漏，这是一种常见错误。</p>
 
 </main>
 
