--- a/detail/ID_sideEffectCopyConstructor.html
+++ b/detail/ID_sideEffectCopyConstructor.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>拷贝构造函数应避免实现复制之外的功能 - C/C++ 安全规则</title>
+  <title>避免在拷贝构造函数中实现复制之外的功能 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,9 +27,9 @@
 </nav>
 <article>
 <header>
-  <h1>拷贝构造函数应避免实现复制之外的功能</h1>
+  <h1>避免在拷贝构造函数中实现复制之外的功能</h1>
   <div id="subtitle">
-    <div id="subtitle-id">8.17 ID_sideEffectCopyConstructor</div>
+    <div id="subtitle-id">8.18 ID_sideEffectCopyConstructor</div>
     <div id="subtitle-tags">
       <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#function">目录</a> › <a class="rule-toc-link" href="./ID_sideEffectMoveConstructor.html">next</a> › <a class="rule-toc-link" href="./ID_exitCallInDestructor.html">previous</a>
     </div>
