--- a/detail/ID_sideEffectMoveConstructor.html
+++ b/detail/ID_sideEffectMoveConstructor.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>移动构造函数应避免实现数据移动之外的功能 - C/C++ 安全规则</title>
+  <title>避免在移动构造函数中实现数据移动之外的功能 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,9 +27,9 @@
 </nav>
 <article>
 <header>
-  <h1>移动构造函数应避免实现数据移动之外的功能</h1>
+  <h1>避免在移动构造函数中实现数据移动之外的功能</h1>
   <div id="subtitle">
-    <div id="subtitle-id">8.18 ID_sideEffectMoveConstructor</div>
+    <div id="subtitle-id">8.19 ID_sideEffectMoveConstructor</div>
     <div id="subtitle-tags">
       <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#function">目录</a> › <a class="rule-toc-link" href="./ID_this_selfJudgement.html">next</a> › <a class="rule-toc-link" href="./ID_sideEffectCopyConstructor.html">previous</a>
     </div>
