--- a/detail/ID_switch_identicalBranch.html
+++ b/detail/ID_switch_identicalBranch.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：内容完全相同的分枝应合并为一个分枝，也可能是由复制粘贴造成的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：完全相同的分枝应合并成一个分枝，也可能是由复制粘贴造成的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>不应存在内容完全相同的 case 分枝 - C/C++ 安全规则</title>
+  <title>不应存在完全相同的 case 或 default 分枝 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>不应存在内容完全相同的 case 分枝</h1>
+  <h1>不应存在完全相同的 case 或 default 分枝</h1>
   <div id="subtitle">
     <div id="subtitle-id">9.5.7 ID_switch_identicalBranch</div>
     <div id="subtitle-tags">
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>内容完全相同的分枝应合并为一个分枝，也可能是由复制粘贴造成的错误。</p>
+<p>完全相同的分枝应合并成一个分枝，也可能是由复制粘贴造成的错误。</p>
 
 <p>示例：</p>
 <pre><code>switch (v)
@@ -52,10 +52,10 @@ case 3:
     branch1   //<i> Non-compliant</i>
     break;
 }</code></pre>
-<p>例中 case 3 对应的分枝和 case 1 对应的分枝内容完全相同，应将其合并为一个分枝，或修正本应存在的差异。</p>
+<p>例中 case 3 对应的分枝和 case 1 对应的分枝完全相同，应将其合并为一个分枝，或修正本应存在的差异。</p>
 
 <p>例外：</p>
-<p>如果分枝内容较少，为了使代码更清晰可以接受适当的重复，但如果分枝内容很多就不应重复了，审计工具不妨指定一个数量限制，当重复分枝的符号数量超过这个限制时算作违规，否则放过。</p>
+<p>如果分枝代码量较少，为了使代码更清晰可以接受适当的重复，但如果代码量很多就不应重复了，审计工具不妨指定一个数量限制，当重复分枝的符号数量超过这个限制时算作违规，否则放过。</p>
 
 </main>
 <h3>配置</h3>
