--- a/detail/ID_throwInDelete.html
+++ b/detail/ID_throwInDelete.html
@@ -39,6 +39,8 @@
 <main>
 <p>内存回收函数抛出异常会导致标准未定义的行为。</p>
 
+<p>抛出异常后，从 throw 表达式到相应 catch 子句各层调用栈中的对象会被自动析构，并释放内存空间，如果在这个过程中抛出异常便违反了异常处理机制，导致未定义的行为。</p>
+
 <p>示例：</p>
 <pre><code>class A {
     ....
