--- a/detail/ID_throwInHash.html
+++ b/detail/ID_throwInHash.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：对象的 hash 过程中不应抛出异常，否则相关的容器和算法无法正常工作。" />
+  <meta name="description" content="C/C++ 安全编程要点：在对象的 hash 过程中不应抛出异常，否则相关的容器和算法无法正常工作。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>对象的 hash 过程中不应抛出异常，否则相关的容器和算法无法正常工作。</p>
+<p>在对象的 hash 过程中不应抛出异常，否则相关的容器和算法无法正常工作。</p>
 
 <p>示例：</p>
 <pre><code>struct U {   //<i> User defined type</i>
