--- a/detail/ID_throwInSwap.html
+++ b/detail/ID_throwInSwap.html
@@ -43,21 +43,23 @@
 
 <p>示例：</p>
 <pre><code>struct T {
-    int* ptr = nullptr;
-
-    void swap(T&amp; a) {
-        int* tmp = ptr;
-        ptr = a.ptr;
-        if (!ptr) {
-            throw Exception();   //<i> Non-compliant</i>
-        }
-        a.ptr = tmp;
-    }
-
-   ~T() {
-        delete[] p;  //<i> Problems</i>
+    string m;
+    void swap(T&amp; a) {   //<i> Non-compliant</i>
+        string tmp = m;
+        m = a.m;
+        a.m = tmp;  //<i> If allocation fails, both ‘a’ and *this will be incorrect</i>
     }
 };</code></pre>
+<p>例中通过复制的方式交换字符串是不符合要求的，如果内存分配失败，被交换的两个对象都将处于错误状态。</p>
+
+<p>应使用字符串类提供的交换函数：</p>
+<pre><code>struct T {
+    string m;
+    void swap(T&amp; a) noexcept {  //<i> Compliant</i>
+        m.swap(a.m);
+    }
+};</code></pre>
+<p>std::string::swap 会直接交换字符串对象的成员，避免内存分配和复制，从而避免抛出异常。</p>
 
 </main>
 
