--- a/detail/ID_unsuitableForward.html
+++ b/detail/ID_unsuitableForward.html
@@ -39,9 +39,7 @@
 <main>
 <p>std::forward 的参数应为“<a href="https://en.cppreference.com/w/cpp/language/reference#Forwarding_references" target="_blank" class="dashed-link">转发引用（forwarding references）</a>”，返回值应直接作为接口的参数，除此之外的使用方式价值有限，且易产生错误。</p>
 
-<p>转发引用是类型为 T&amp;&amp; 的参数，T 为函数模板类型，无论左值还是右值均可被这种参数接受，而且 const、volatile 等属性也会被忽略，这种参数应通过 std::forward&lt;T&gt; 交由合适的接口处理。</p>
-
-<p>关于转发引用，可参见 <a href="./ID_illForwardingReference.html" class="dashed-link">ID_illForwardingReference</a> 的进一步说明。</p>
+<p>转发引用是类型为 T&amp;&amp; 的参数，T 为函数模板类型，左值和右值均可与之绑定，可参见 <a href="./ID_illForwardingReference.html" class="dashed-link">ID_illForwardingReference</a> 的进一步说明。</p>
 
 <p>示例：</p>
 <pre><code>struct A { .... };
