--- a/detail/ID_virtualInFinal.html
+++ b/detail/ID_virtualInFinal.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>final 类中不应声明虚函数 - C/C++ 安全规则</title>
+  <title>在 final 类中不应声明虚函数 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>final 类中不应声明虚函数</h1>
+  <h1>在 final 类中不应声明虚函数</h1>
   <div id="subtitle">
     <div id="subtitle-id">6.8.13 ID_virtualInFinal</div>
     <div id="subtitle-tags">
